2014-08-13  Ramon Casero  <rcasero@gmail.com>

	* matlab/FiltersToolbox/elastix_read_transf_result.m: (0.1.1)

	- Rename output iter as iterInfo.

	- Remove double quotes "" from text fields in the struct.

	* Add matlab/FiltersToolbox/elastix_read_transf_result.m: (0.1.0)

	- elastix_read_transf_result Read the result image and transform
	parameters of a registration computed with elastix.

	* Rename matlab/CardiacToolbox/blockface_frame_shifts.m as
	matlab/CardiacToolbox/blockface_find_frame_shifts.m.

2014-08-11  Ramon Casero  <rcasero@gmail.com>

	* matlab/ManifoldToolbox/scimat_surface2seg.m: (0.1.1)

	- Fix bug. Instead of passing the size of the image volume, we
	were passing the size of the size vector.

	* Add matlab/CardiacToolbox/blockface_frame_shifts.m: (0.1.0)

	- blockface_frame_shifts Find translation shifts between
	consecutive blockface frames.

2014-08-06  Ramon Casero  <rcasero@gmail.com>

	* Add matlab/ManifoldToolbox/scimat_surface2seg.m: (0.1.0)

	- scimat_surface2seg Convert triangular mesh into segmentation.

2014-08-05  Ramon Casero  <rcasero@gmail.com>

	* matlab/ManifoldToolbox/surface_tridomain.m: (0.3.0)

	- Add 'sphunif' option, to generate uniform meshing of the sphere.

	* Move matlab/PointsToolbox/surface_interp.m to
	matlab/ManifoldToolbox/surface_interp.m.
	* Move matlab/PointsToolbox/surface_param.m to
	matlab/ManifoldToolbox/surface_param.m.

	- To group them with surface_tridomain(), and highlight that these
	are manifold functions.

	* Add matlab/PointsToolbox/surface_interp.m: (0.0.1)
	* Delete matlab/PointsToolbox/surface_interpolation.m:

	- SURFACE_INTERP Interpolate an open or closed surface from a
	parametrized scattered set of points.

	- Cannibalize old surface_interpolation() to make more modular,
	leaner functions. We already added surface_param(), that took the
	parametrization block. Now, surface_interp() takes the
	interpolation methods themselves. Another function,