@@ -40,6 +40,8 @@ Toolboxes in Gerardus:
 CardiacToolbox
 -------------------------------------------------------------
 
+blockface_correct_frame_shifts.m
+
 blockface_correct_perspective.m
 
 	 CORRECT_BLOCKFACE_PERSPECTIVE  Transform Bewster angle blockface image
@@ -293,10 +295,10 @@ correct_light_blobs_in_microscope_mosaic.m
 	 CORRECT_LIGHT_BLOBS_IN_MICROSCOPE_MOSAIC  Correct the colour blob created
 	 by the microscope's light in each tile of a mosaic, e.g. for histology.
 	
-elastix_read_transf_result.m
+elastix_read_reg_output.m
 
-	 elastix_read_transf_result  Read the result image and transform
-	 parameters of a registration computed with elastix
+	 elastix_read_reg_output  Read output of registration computed with
+	 elastix.
 	
 fspecial3.m
 
